# Faced_eyes_detection

./: CMakeLists.txt  README.md  main.cpp
